# desk-buddy

./: .envrc  .gitignore  README.md  flake.nix  start-all.sh  start-app.sh  start-local.screenrc  start-server.sh
.devcontainer/: Dockerfile  devcontainer.json  post-install-setup.sh
app/: .env-example  .eslintrc.json  README.md  index.html  manifest.json  package-lock.json  package.json
app/src/: App.tsx  theme.ts
app/src/services/: api.ts  (+2 more)
device-emulator/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
device-emulator/src/: index.tsx
micropython/: activity.py  captive_portal_setup.py  dashboard.py  executor.py  firmware.py  global_classes.py  hwconfig.py  hwconfig_supermini.py  hwconfig_xiao.py  main-removeme.py  main.py  main_.py  main_removethissuffix.py  menu.py  notifications.py  osb_firmware.py  pairing_code_activity.py  reboot_activity.py  secrets-example.py  utils.py
micropython/app/: flappybuddy.py
micropython/apps/: flappybuddy.py
server/: .env-example  config.py  pyproject.toml  requirements.txt  start.py
server/app/: app.py  bcrypt.py  db.py  errors.py  middlewares.py  socketio_instance.py  utils.py
server/app/dashboard/: __init__.py  routes.py  services.py
server/app/devices/: __init__.py  routes.py  services.py
server/app/helpers/: __init__.py  home_assistant.py  utils.py
server/app/jobs/: background_jobs.py
server/app/messages/: __init__.py  routes.py  services.py
server/app/users/: __init__.py  routes.py
server/scripts/: docker-build-run.sh  run.sh  setup.sh  venv.sh  write-requirements.sh
(+20 files in other folders)
