[project]
name = "server"
version = "0.1.0"
description = "Desk Buddy Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.38.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.1",
    "flask-socketio>=5.4.1",
    "pymongo>=4.10.1",
    "flask-bcrypt>=1.0.1",
    "flask-apscheduler>=1.13.1",
    "flask-session[mongodb]>=0.8.0",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
